# app_v3_commentaire

./: BUILD.md  CHANGES.md  CMakeLists.txt  COMMENTS.md  README.md  TOOLCHAIN.md  build.bat  build.sh  scenario.cfg
analyzer/include/: CSVExporter.hpp  CoreAnalyzer.hpp  CoreFileParser.hpp  DatabaseManager.hpp  MLAnalyzer.hpp  PatternMatcher.hpp  SolutionProposer.hpp
analyzer/src/: CSVExporter.cpp  CoreAnalyzer.cpp  CoreFileParser.cpp  DatabaseManager.cpp  MLAnalyzer.cpp  PatternMatcher.cpp  SolutionProposer.cpp  main.cpp
analyzer_output/: analysis_report.csv  analysis_report.csv.json
cmake/: Toolchain-Linux.cmake  Toolchain-RaspberryPi.cmake  Toolchain-Windows.cmake
coredump_handler/inc/: BacktraceCollector.hpp  CoreDump.hpp  CoreDumpConfig.hpp  Options.hpp  Platform.hpp  SystemMetrics.hpp
coredump_handler/src/: BacktraceCollector.cpp  CoreDump.cpp  CoreDumpConfig.cpp  SystemMetrics.cpp  main.cpp
dashboard/: dashboard.py
scripts/: run_pipeline.sh  setup_coredump.sh
simulator/include/: CrashTypes.hpp  Randomizer.hpp  Simulator.hpp
simulator/src/: Randomizer.cpp  Simulator.cpp  simulator_main.cpp
simulator_output/: crash_report.csv
simulator_output/coredumps/: core.crash_simulator.309176.1776769186  core.crash_simulator.309201.1776769186  core.crash_simulator.309339.1776769202  core.crash_simulator.319396.1776775414  core.crash_simulator.319468.1776775414  core.crash_simulator.334373.1776782527  core.crash_simulator.334471.1776782528  core.crash_simulator.334712.1776782642
test/: test_suite.cpp
